--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="./images/couple.png" alt="">
             </div>
             <div class="info tag secondary">
-                <h3 style="text-transform:uppercase;letter-spacing: 0.15rem;">Shikha Gupta <br> & <br> Satya Prakash Gupta</h3>
+                <h3 style="text-transform:uppercase;letter-spacing: 0.15rem;">Ms. Shikha Gupta <br> & <br> Mr. Satya Prakash Gupta</h3>
             </div>
         </div>
     </div>
